--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
 
       <section class="menu menu--off">
         <div>
-          <img src="./assets/images/logo/logo.svg" alt="" class="logo" />
+          <a href="./index.html">
+            <img src="./assets/images/logo/logo.svg" alt="" class="logo" />
+          </a>
         </div>
         <div>
           <a href="./sale-request.html" class="content-link">売却依頼</a>
