せっていまわり

--- a/src/latest-properties.html
+++ b/src/latest-properties.html
@@ -1,2 +1,51 @@
 <!-- コンテンツをここに表示 -->
-<h1>最新物件</h1>
+<div id="content-container">
+  <h1>最新物件</h1>
+
+  <div class="slider">
+    <div class="slider-wrapper">
+      <div class="slide">
+        <img
+          src="./assets/images/latest/AdobeStock_139339050_Preview.jpeg"
+          alt=""
+        />
+      </div>
+      <div class="slide">
+        <img
+          src="./assets/images/latest/AdobeStock_165264567_Preview.jpeg"
+          alt=""
+        />
+      </div>
+      <div class="slide">
+        <img
+          src="./assets/images/latest/AdobeStock_212983658_Preview.jpeg"
+          alt=""
+        />
+      </div>
+      <div class="slide">
+        <img
+          src="./assets/images/latest/AdobeStock_293291199_Preview.jpeg"
+          alt=""
+        />
+      </div>
+      <div class="slide">
+        <img
+          src="./assets/images/latest/AdobeStock_304039391_Preview.jpeg"
+          alt=""
+        />
+      </div>
+      <div class="slide">
+        <img
+          src="./assets/images/latest/AdobeStock_478931630_Preview.jpeg"
+          alt=""
+        />
+      </div>
+      <div class="slide">
+        <img
+          src="./assets/images/latest/AdobeStock_82772694_Preview.jpeg"
+          alt=""
+        />
+      </div>
+    </div>
+  </div>
+</div>
