--- a/src/latest-properties.html
+++ b/src/latest-properties.html
@@ -2,7 +2,7 @@
 <div id="content-container">
   <h1>最新物件</h1>
 
-  <div class="slider">
+  <!-- <div class="slider">
     <div class="slider-wrapper">
       <div class="slide">
         <img
@@ -47,5 +47,5 @@
         />
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
